# glslExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  defaultShaders.h  imgui.ini  main.cpp  tests.cpp
examples/: blank.glsl  disk.glsl  imgui.ini  julia.glsl  mandelbrot.glsl  noise.glsl  palette.py  voronoi.glsl
include/: UserSettings.hpp  screenshot.h
include/GLBase/: GLBase.hpp
include/GLBase/core/: FrameBuffer.hpp  GLBuffer.hpp  IndexBuffer.hpp  RNG.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  glErrors.h
include/GLBase/math/: Matrix.hpp  Vector.hpp
src/: FrameBuffer.cpp  GLBase.cpp  GLBuffer.cpp  IndexBuffer.cpp  Matrix.cpp  RNG.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  UserParams.cpp  Vector.cpp  VertexArray.cpp  VertexBuffer.cpp  glErrors.c  screenshot.cpp
